fix : emergecnycontact 오류 처리